--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ table tr:nth-child(even) {
 
 /* Watermark */
 body::before {
-  content: "Kingsley's property DO NOT USE";
+  content: "Don't use, it's Kingsley's property";
   font-size: 30px;
   color: rgba(253, 251, 251, 0.1);
   position: fixed;
