--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,13 @@
   padding: 0;
 }
 
+html, body {
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+
 body {
   font-family: 'Segoe UI', sans-serif;
   line-height: 1.6;
@@ -301,12 +308,12 @@ body::before {
   content: "Don't use, it's Kingsley's property";
   font-size: 30px;
   color: rgba(253, 251, 251, 0.1);
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -30%) rotate(-45deg);
   white-space: nowrap;
-  z-index: -1;
+  z-index: 0;
   pointer-events: none;
   opacity: 0.5;
   font-family: Arial, sans-serif;
